<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            style="@style/MyLinearLayoutStyle"
            android:gravity="center_horizontal">

            <TextView
                style="@style/textViewStyle"
                android:text="@string/mom_s_magic"
                android:textSize="@dimen/text_app_name_title" />


            <!-- First Name -->
            <EditText
                android:id="@+id/edtFirstName"
                style="@style/editTextStyle"
                android:layout_marginTop="@dimen/dp_16"
                android:hint="@string/name" />

            <!-- Last Name -->
            <EditText
                android:id="@+id/edtLastName"
                style="@style/editTextStyle"
                android:hint="@string/last_name"
                android:visibility="gone" />

            <!-- Email -->
            <EditText
                android:id="@+id/edtEmail"
                style="@style/editTextStyle"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <!-- Password -->
            <EditText
                android:id="@+id/edtPassword"
                style="@style/editTextStyle"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <!-- Confirm Password -->
            <EditText
                android:id="@+id/edtConfirmPassword"
                style="@style/editTextStyle"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:visibility="gone" />


            <!-- Address -->
            <EditText
                android:id="@+id/edtAddress"
                style="@style/editTextStyle"
                android:hint="@string/address" />

            <!-- Phone Number -->
            <EditText
                android:id="@+id/edtPhoneNumber"
                style="@style/editTextStyle"
                android:hint="@string/phone_number"
                android:inputType="phone" />

            <!-- Sign Up Button -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSave"
                style="@style/buttonStyle"
                android:layout_marginTop="@dimen/dp_16"
                android:text="@string/save" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDelete"
                style="@style/buttonStyle"
                android:layout_marginTop="@dimen/dp_16"
                android:backgroundTint="@color/red"
                android:text="@string/delete" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>