<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".IntroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/background_intro"
        android:layout_weight="2"
        android:weightSum="3">

        <TextView
            android:textColor="@color/white"
            style="@style/textViewStyle"
            android:layout_weight="1"
            android:text="@string/mom_s_magic"
            android:textSize="@dimen/text_app_name_title" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:layout_weight="1"/>

        <TextView
            android:textColor="@color/white"
            android:id="@+id/textView2"
            style="@style/textViewStyle"
            android:text="@string/food_delivery_app"
            android:textSize="@dimen/semi_title"
            android:layout_weight="1"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        style="@style/buttonStyle"
        android:id="@+id/btnStart"
        android:text="@string/get_started"
        android:layout_margin="@dimen/dp_16"
        />
</LinearLayout>
